upd: 重新调整定位相关mixin upd: 分离说明文档

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@yoz/stylus-shortcut",
-  "version": "1.1.0",
+  "name": "@hiyoz/stylus-shortcut",
+  "version": "1.0.0",
   "description": "yoz shortcut stylus mixins style",
   "main": "index.js",
   "scripts": {
