--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@hiyoz/stylus-shortcut",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "yoz shortcut stylus mixins style",
-  "main": "shortcut.styl",
+  "main": "src/index.styl",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test.js",
+    "doc-stylus": "node docs/stylus/build-doc-stylus.js"
   },
   "author": "kwokronny",
   "license": "ISC",
