feat: 增加更新日志 upd: 更新开发意图 upd: 完善及解决flex中align值问题，及mixin中flex的归属问题

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.styl",
   "scripts": {
     "test": "node test/test.js",
-    "doc-stylus": "node docs/stylus/build-doc-stylus.js"
+    "docs": "node script/docs.js"
   },
   "author": "kwokronny",
   "license": "ISC",
