--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@hiyoz/stylus-shortcut",
-  "version": "1.1.0",
-  "description": "yoz shortcut stylus mixins style",
+  "name": "stylus-shortcut",
+  "version": "1.0.0",
+  "keywords": ["stylus","shortcut","fast","mixin","bootstrap","customize"],
+  "description": "stylus 快捷的混合函数与基础常用样式规则集合，可以更快的完成样式编写",
   "main": "src/index.styl",
   "scripts": {
     "test": "node test/test.js",
