feat: text 模块增加 textOverflow 相关方法 feat: util 常用模块增加 cursor 相关样式 feat: bg 背景模块增加 backgroundRepeat 相关样式 upd: bg 背景模块  backgroundSize 增加可选项 fix: 混合便捷规则 text-clamp_1 相关方法

--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "stylus-shortcut",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": ["stylus","shortcut","fast","mixin","bootstrap","customize"],
   "description": "stylus 快捷的混合函数与基础常用样式规则集合，可以更快的完成样式编写",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kwokronny/stylus-shortcut"
+  },
+  "homepage": "https://kwokronny.github.io/stylus-shortcut",
   "main": "src/index.styl",
   "scripts": {
     "test": "node test/test.js",
